Opening a new image in the image editor. #37826

Closed
opened 2013-12-15 22:09:40 +01:00 by Richard Burns · 8 comments

System Information
Operating system and graphics card

Windows 7 64 bit build Service P

Blender Version
Broken: Blender 2.69.2 r61240
Worked: Unknown

Short description of error

Exact steps for others to reproduce the error

Open Image Editor, press the "new" image button. make the image resolution 65536 x 65536. and press ok. it will immediately crash.

**System Information** Operating system and graphics card Windows 7 64 bit build Service P **Blender Version** Broken: Blender 2.69.2 r61240 Worked: Unknown **Short description of error** **Exact steps for others to reproduce the error** Open Image Editor, press the "new" image button. make the image resolution 65536 x 65536. and press ok. it will immediately crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @richmeister4eva

Added subscriber: @richmeister4eva
Author

Gpu: Nvidia GeForce 570 + Quadro 600
Drivers: 331.82

Gpu: Nvidia GeForce 570 + Quadro 600 Drivers: 331.82

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by blender/blender-addons-contrib@c193dbe30b

This issue was referenced by blender/blender-addons-contrib@c193dbe30b40beb435d6edde7117469f4706f98e

This issue was referenced by c193dbe30b

This issue was referenced by c193dbe30b40beb435d6edde7117469f4706f98e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c193dbe30b.

Closed by commit c193dbe30b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37826
No description provided.